--- a/employee-management-system/src/main/resources/templates/login.html
+++ b/employee-management-system/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">
-                <i class="fas fa-sign-in-alt"></i> Login
+                <i class=""></i> Login
             </button>
         </form>
 
