--- a/employee-management-system/src/main/resources/templates/dashboard.html
+++ b/employee-management-system/src/main/resources/templates/dashboard.html
@@ -37,7 +37,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" th:href="@{/}"></a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/employees}">Employees</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/department}">Department</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/department}">Departments</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/reports}">Reports</a></li>
             </ul>
 
