--- a/employee-management-system/src/main/resources/templates/index.html
+++ b/employee-management-system/src/main/resources/templates/index.html
@@ -58,8 +58,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/dashboard}">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/employees}">Employees</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/department}">Departments</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/reports}">Reports</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/logout}">
