--- a/employee-management-system/src/main/resources/templates/new_department.html
+++ b/employee-management-system/src/main/resources/templates/new_department.html
@@ -59,7 +59,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" th:href="@{/dashboard}">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/employees}">Employees</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/department}">Departments</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/departments}">Departments</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/reports}">Reports</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/logout}">
