--- a/employee-management-system/src/main/resources/templates/new_employee.html
+++ b/employee-management-system/src/main/resources/templates/new_employee.html
@@ -83,7 +83,12 @@
                 <input type="email" class="form-control" th:field="*{email}" placeholder="Enter Email" required>
             </div>
 
-            <!-- Add this new department selection field -->
+            <div class="mb-3">
+                <label for="hireDate" class="form-label">Hire Date</label>
+                <input type="date" class="form-control" id="hireDate" th:field="*{hireDate}" required>
+            </div>
+
+
             <div class="mb-3">
                 <label class="form-label">Department</label>
                 <select class="form-control" th:field="*{department}" required>
