--- a/employee-management-system/src/main/resources/templates/update_employee.html
+++ b/employee-management-system/src/main/resources/templates/update_employee.html
@@ -94,6 +94,11 @@
                 <input type="email" class="form-control" th:field="*{email}" placeholder="Enter Email" required>
             </div>
 
+            <div class="mb-3">
+                <label for="hireDate" class="form-label">Hire Date</label>
+                <input type="date" class="form-control" id="hireDate" th:field="*{hireDate}" required>
+            </div>
+
             <!-- Buttons -->
             <div class="d-flex justify-content-between">
                 <a class="btn btn-secondary" href="/">
