--- a/employee-management-system/src/main/resources/templates/new_employee.html
+++ b/employee-management-system/src/main/resources/templates/new_employee.html
@@ -88,6 +88,11 @@
                 <input type="date" class="form-control" id="hireDate" th:field="*{hireDate}" required>
             </div>
 
+            <div class="mb-3">
+                <label class="form-label">Salary</label>
+                <input type="number" step="0.01" class="form-control" th:field="*{salary}" placeholder="Enter Salary" required>
+            </div>
+
 
             <div class="mb-3">
                 <label class="form-label">Department</label>
